--- a/endtoend.ipynb
+++ b/endtoend.ipynb
@@ -66,7 +66,10 @@
     "\n",
     "session = sagemaker.Session()\n",
     "role = sagemaker.get_execution_role()\n",
-    "bucket = session.default_bucket()"
+    "bucket = session.default_bucket()\n",
+    "\n",
+    "import os \n",
+    "bucket = os.environ[\"S3_BUCKET\"]"
    ]
   },
   {
