fetching bucket-name from userprofile

--- a/endtoend.ipynb
+++ b/endtoend.ipynb
@@ -68,8 +68,11 @@
     "role = sagemaker.get_execution_role()\n",
     "bucket = session.default_bucket()\n",
     "\n",
-    "import os \n",
-    "bucket = os.environ[\"S3_BUCKET\"]"
+    "import os\n",
+    "import json\n",
+    "pathsh = \"/opt/ml/metadata/resource-metadata.json\"\n",
+    "res = json.load(open(pathsh))\n",
+    "bucket = res[\"UserProfileName\"]"
    ]
   },
   {
